# ada-vector-search

./: .gitignore  pyproject.toml  vector.ipynb
es/: eskeeper.yml
terraform/: README.md  main.tf  output.tf
