[tool.poetry]
name = "ada-vector-search"
version = "0.1.0"
description = ""
authors = ["Hiromu Nakamura <hiromu-nakamura@m3.com>"]
readme = "README.md"
packages = [{include = "ada_vector_search"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
transformers = "^4.30.2"
torch = "^2.0.1"
sentencepiece = "^0.1.99"
google-cloud-bigquery = "^3.11.2"
pandas = "^2.0.2"
pandas-gbq = "^0.19.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
